2007-12-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds: Spacing.
	* startup/linkcmds.brs5l: Add wildcard to .bss section.

2007-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/irq.c, startup/bspclean.c, startup/bspstart.c: I give. The code
	is now in conditionally so I can avoid putting it in accidently
	again.

	* startup/bspclean.c: Revert patch with test code.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* irq/irq.c: Revert accidentally committed test code.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bsp_specs, clock/clock.c, include/bsp.h, irq/irq.c,
	startup/bspclean.c, startup/bspstart.c: Eliminate copies of the
	Configuration Table. Use the RTEMS provided accessor macros to obtain
	configuration fields.

2007-12-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/mpc5200.h: Expand tabs.

2007-12-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Correct BSP specific Idle thread support.

2007-12-05	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq_init.c, irq_asm.S:
	Converted exception vector names to new ones
	(qualified by <cpu_type> if non-std ppc exceptions).

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Move interrupt_stack_size field from CPU Table to
	Configuration Table. Eliminate CPU Table from all ports. Delete
	references to CPU Table in all forms.

2007-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c: Fix typo.

2007-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/irq.c: Spacing.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Moved most of the remaining CPU Table fields to
	the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.
